--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Presentación</title>
+    <meta name"author" content="Eduard Sebastian Gaici">
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
+    <title>The Sisterhood Clip™</title>
     <style>
         * {
             margin: 0;
