--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             background: rgba(255, 255, 255, 0.6);
             border-radius: 50%;
             animation: move 6s linear infinite;
+            transform: translateY(100vh);
         }
 
         @keyframes move {
