--- a/index.html
+++ b/index.html
@@ -3,136 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name"author" content="Eduard Sebastian Gaici">
-    <link rel="icon" type="image/x-icon" href="./favicon.png">
+    <meta name="author" content="Eduard Sebastian Gaici">
+    <link rel="icon" type="image/x-icon" href="./media/favicon.png">
+    <link rel="stylesheet" href="./styles/bajo-construccion.css">
     <title>The Sisterhood Clip™</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: calc(100vh - 20px); /* Restar margen superior */
-            background: linear-gradient(135deg, #f3c1d2, #f1e7dd);
-            font-family: Arial, sans-serif;
-            overflow: hidden;
-            margin-top: 20px; /* Añadir margen superior */
-        }
-
-        .logo-container {
-            position: absolute;
-            animation: float-center 10s infinite ease-in-out;
-        }
-
-        .logo-container img {
-            width: 150px;
-            height: auto;
-            border-radius: 50%;
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s ease;
-        }
-
-        .logo-container img:hover {
-            transform: scale(1.1);
-        }
-
-        @keyframes float-center {
-            0% {
-                transform: translate(0, 0);
-            }
-            25% {
-                transform: translate(50px, -30px);
-            }
-            50% {
-                transform: translate(-30px, 50px);
-            }
-            75% {
-                transform: translate(30px, -50px);
-            }
-            100% {
-                transform: translate(0, 0);
-            }
-        }
-
-        .particles {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            overflow: hidden;
-        }
-
-        .particle {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            background: rgba(255, 255, 255, 0.6);
-            border-radius: 50%;
-            animation: move 6s linear infinite;
-            transform: translateY(100vh);
-        }
-
-        @keyframes move {
-            0% {
-                transform: translateY(100vh) scale(1);
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(-100vh) scale(0.5);
-                opacity: 0;
-            }
-        }
-
-        .particles .particle:nth-child(1) {
-            left: 10%;
-            animation-delay: 0s;
-        }
-        .particles .particle:nth-child(2) {
-            left: 25%;
-            animation-delay: 2s;
-        }
-        .particles .particle:nth-child(3) {
-            left: 50%;
-            animation-delay: 4s;
-        }
-        .particles .particle:nth-child(4) {
-            left: 75%;
-            animation-delay: 1s;
-        }
-        .particles .particle:nth-child(5) {
-            left: 90%;
-            animation-delay: 3s;
-        }
-        .under-construction {
-            position: fixed; /* Use fixed positioning for reliable placement */
-            bottom: 20px; /* Adjust bottom margin as needed */
-            right: 20px; /* Adjust right margin as needed */
-            transform: none; /* Remove the initial rotation */
-            background: rgba(243, 193, 210, 0.9);
-            color: #ffffff;
-            font-size: 14px;
-            font-weight: bold;
-            padding: 8px 12px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            text-align: center;
-            z-index: 10;
-        }
-
-        @media (max-width: 600px) {
-            .under-construction {
-                font-size: 12px;
-                padding: 6px 10px;
-            }
-        }
-    </style>
 </head>
 <body>
     <div class="particles">
@@ -143,10 +17,13 @@
         <div class="particle"></div>
     </div>
     <div class="logo-container">
-        <img src="logo.png" alt="Logo del proyecto">
+        <img src="./media/logo.png" alt="Logo del proyecto">
     </div>
-    <div class="under-construction ribbon">
+    <div class="under-construction">
         Bajo construcción
+    </div>
+    <div class="preview-link">
+        <a href="./preview/index.html">UN PREVIEW</a>
     </div>
 </body>
 </html>
