Jugar con rutas

--- a/preview/index.html
+++ b/preview/index.html
@@ -19,7 +19,7 @@
         <p>Cada accesorio que creamos está hecho con amor y atención al detalle. Nos comprometemos a brindar una experiencia excepcional, porque para nosotros, cada cliente es una musa y una inspiración.</p>     
     </div>
     <div class="back-button">
-        <a href="../index.html">&times;</a>
+        <a href="/index.html">&times;</a>
     </div>   
 </body>
 </html>
