--- a/html/about.html
+++ b/html/about.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
-    <!-- Metadatos básicos -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -9,9 +8,8 @@
 </head>
 <body>
     <nav>
-        <a href="/html/about.html">About</a>
+        <a href="/index.html">Home</a>
     </nav>
-    <h1>Homepage</h1>
-    <p>Hello World!</p>
+    <h1>About us</h1>
 </body>
 </html>
