Devolver el "Bajo Construcción"

--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <!-- Metadatos básicos -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <meta name="author" content="Eduard Sebastian Gaici">
+    <link rel="icon" type="image/x-icon" href="./media/favicon.png">
+    <link rel="stylesheet" href="./styles/bajo-construccion.css">
+    <title>The Sisterhood Clip™</title>
 </head>
 <body>
-    <nav>
-        <a href="/html/about.html">About</a>
-    </nav>
-    <h1>Homepage</h1>
-    <p>Hello World!</p>
+    <div class="particles">
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+    </div>
+    <div class="logo-container">
+        <img src="/media/logo.png" alt="Logo del proyecto">
+    </div>
+    <div class="under-construction">
+        Bajo construcción
+    </div>
+    <div class="preview-link">
+        <a href="/preview/index.html">UN PREVIEW</a>
+    </div>
 </body>
 </html>
