--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Eduard Sebastian Gaici">
-    <link rel="icon" type="image/x-icon" href="./media/favicon.png">
+    <link rel="icon" type="image/x-icon" href="/media/favicon.png">
     <link rel="stylesheet" href="./styles/bajo-construccion.css">
     <title>The Sisterhood Clip™</title>
 </head>
