--- a/index.html
+++ b/index.html
@@ -1,29 +1,287 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Eduard Sebastian Gaici">
-    <link rel="icon" type="image/x-icon" href="/media/favicon.png">
-    <link rel="stylesheet" href="./styles/bajo-construccion.css">
-    <title>The Sisterhood Clip™</title>
-</head>
-<body>
+<html lang="es" prefix="og: https://ogp.me/ns#">
+  <head>
+    <!-- Configuración básica -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <!-- Metadatos básicos de SEO -->
+    <title>The Sisterhood Clip® - Página Oficial</title>
+    <meta name="description" content="Lorem ipsum" />
+    <meta name="keywords" content="keyword1, keyword2, keyword 3" />
+    <meta name="author" content="The Sisterhood Clip S.L." />
+    <meta name="robots" content="index, follow" />
+
+    <!-- URL canónica y enlaces alternativos -->
+    <link rel="canonical" href="/" />
+    <link rel="alternate" href="/homepage.html" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="The Sisterhood Clip® - Página Oficial" />
+    <meta
+      property="og:description"
+      content="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum in facilis cum iure enim iusto ullam voluptate blanditiis et quae mollitia, sed facere cupiditate. Quaerat praesentium iure dolores illum laudantium."
+    />
+    <meta property="og:image" content="/assets/meta/opengraph/opengraph.png" />
+    <meta
+      property="og:image:secure_url"
+      content="/assets/meta/opengraph/opengraph.png"
+    />
+    <meta property="og:image:alt" content="Logo de The Sisterhood Clip" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="The Sisterhood Clip" />
+    <meta property="og:url" content="/homepage.html" />
+    <meta property="og:locale" content="es_ES" />
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="The Sisterhood Clip® - Página Oficial"
+    />
+    <meta
+      name="twitter:description"
+      content="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum in facilis cum iure enim iusto ullam voluptate blanditiis et quae mollitia, sed facere cupiditate. Quaerat praesentium iure dolores illum laudantium."
+    />
+    <meta name="twitter:image" content="/assets/meta/opengraph/opengraph.png" />
+    <meta name="twitter:site" content="@sisterhoodclip" />
+
+    <!-- Favicon y Web App Manifest -->
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/assets/meta/favicon/favicon.ico"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/meta/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/meta/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/assets/meta/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/assets/meta/favicon/favicon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="/assets/meta/favicon/favicon-512x512.png"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/assets/meta/favicon/favicon.svg"
+    />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/meta/favicon/apple-touch-icon.png"
+    />
+    <meta name="apple-mobile-web-app-title" content="The Sisterhood Clip" />
+
+    <meta name="msapplication-TileColor" content="#f0e7db" />
+    <meta
+      name="msapplication-TileImage"
+      content="/assets/meta/favicon/mstile-150x150.png"
+    />
+
+    <meta name="theme-color" content="#640018" />
+    <link rel="manifest" href="/assets/meta/favicon/site.webmanifest" />
+
+    <!-- Datos estructurados (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org"
+      }
+    </script>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: calc(100vh - 20px); /* Restar margen superior */
+        background: linear-gradient(135deg, #f3c1d2, #f1e7dd);
+        font-family: Arial, sans-serif;
+        overflow: hidden;
+        margin-top: 20px; /* Añadir margen superior */
+      }
+
+      .logo-container {
+        position: absolute;
+        animation: float-center 10s infinite ease-in-out;
+      }
+
+      .logo-container img {
+        width: 150px;
+        height: auto;
+        border-radius: 50%;
+        box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s ease;
+      }
+
+      .logo-container img:hover {
+        transform: scale(1.1);
+      }
+
+      @keyframes float-center {
+        0% {
+          transform: translate(0, 0);
+        }
+        25% {
+          transform: translate(50px, -30px);
+        }
+        50% {
+          transform: translate(-30px, 50px);
+        }
+        75% {
+          transform: translate(30px, -50px);
+        }
+        100% {
+          transform: translate(0, 0);
+        }
+      }
+
+      .particles {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        overflow: hidden;
+      }
+
+      .particle {
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        background: rgba(255, 255, 255, 0.6);
+        border-radius: 50%;
+        animation: move 6s linear infinite;
+        transform: translateY(100vh);
+      }
+
+      @keyframes move {
+        0% {
+          transform: translateY(100vh) scale(1);
+          opacity: 1;
+        }
+        100% {
+          transform: translateY(-100vh) scale(0.5);
+          opacity: 0;
+        }
+      }
+
+      .particles .particle:nth-child(1) {
+        left: 10%;
+        animation-delay: 0s;
+      }
+      .particles .particle:nth-child(2) {
+        left: 25%;
+        animation-delay: 2s;
+      }
+      .particles .particle:nth-child(3) {
+        left: 50%;
+        animation-delay: 4s;
+      }
+      .particles .particle:nth-child(4) {
+        left: 75%;
+        animation-delay: 1s;
+      }
+      .particles .particle:nth-child(5) {
+        left: 90%;
+        animation-delay: 3s;
+      }
+      .under-construction {
+        position: fixed; /* Use fixed positioning for reliable placement */
+        bottom: 20px; /* Adjust bottom margin as needed */
+        right: 20px; /* Adjust right margin as needed */
+        transform: none; /* Remove the initial rotation */
+        background: rgba(243, 193, 210, 0.9);
+        color: #ffffff;
+        font-size: 14px;
+        font-weight: bold;
+        padding: 8px 12px;
+        border-radius: 8px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        text-align: center;
+        z-index: 10;
+      }
+
+      /* PREVIEW */
+      .preview-link {
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        bottom: 150px; /* Ajusta este valor según sea necesario */
+        width: 100%;
+      }
+
+      .preview-link a {
+        font-family: "Now", sans-serif;
+        color: #640018;
+        font-size: 18px;
+        padding: 8px 12px;
+        border-radius: 8px;
+        transition: background-color 0.3s ease;
+      }
+
+      .preview-link a:hover {
+        background-color: rgba(100, 0, 24, 0.1);
+      }
+
+      /* RESPONSIVE */
+      @media (max-width: 600px) {
+        .under-construction {
+          font-size: 12px;
+          padding: 6px 10px;
+        }
+
+        .preview-link a {
+          font-size: 16px;
+        }
+      }
+    </style>
+  </head>
+  <body>
     <div class="particles">
-        <div class="particle"></div>
-        <div class="particle"></div>
-        <div class="particle"></div>
-        <div class="particle"></div>
-        <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
+      <div class="particle"></div>
     </div>
     <div class="logo-container">
-        <img src="/media/logo.png" alt="Logo del proyecto">
+      <img src="/assets/images/logo-bajo-construccion.png" alt="Logo del proyecto" />
     </div>
-    <div class="under-construction">
-        Bajo construcción
-    </div>
+    <div class="under-construction">Bajo construcción</div>
     <div class="preview-link">
-        <a href="/preview/index.html">UN PREVIEW</a>
+      <a href="/homepage.html">UN PREVIEW</a>
     </div>
-</body>
+  </body>
 </html>
